<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/activity_registe_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/login_register_hint"
        android:textSize="18sp"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/color_Navigation"
        android:textColor="@color/white"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/listview_topline"
        app:layout_constraintTop_toBottomOf="@id/activity_registe_title"/>

    <ImageView
        android:id="@+id/activity_registe_back"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/btn_back_white"
        app:layout_constraintTop_toTopOf="@id/activity_registe_title"
        app:layout_constraintBottom_toBottomOf="@id/activity_registe_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="15dp"/>

    <EditText
        android:id="@+id/activity_registe_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/login_input_username_hint"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/activity_registe_username_error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_red"
        android:textSize="@dimen/font_12"
        android:text="@string/format_reminder_name"
        app:layout_constraintTop_toBottomOf="@id/activity_registe_username"
        app:layout_constraintLeft_toLeftOf="@id/activity_registe_username"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="5dp"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/activity_registe_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:hint="@string/hint_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_registe_username_error_tv" />

    <TextView
        android:id="@+id/activity_registe_pwd_error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_red"
        android:textSize="@dimen/font_12"
        android:text="@string/format_reminder_pwd"
        app:layout_constraintTop_toBottomOf="@id/activity_registe_password"
        app:layout_constraintLeft_toLeftOf="@id/activity_registe_username_error_tv"
        android:layout_marginTop="5dp"
        android:layout_marginRight="24dp"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/activity_registe_password_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:hint="@string/registe_Confirm_password_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_registe_pwd_error_tv" />

    <TextView
        android:id="@+id/activity_registe_password_confirm_error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_red"
        android:textSize="@dimen/font_12"
        android:text="@string/differentPassword"
        app:layout_constraintTop_toBottomOf="@id/activity_registe_password_confirm"
        app:layout_constraintLeft_toLeftOf="@id/activity_registe_username_error_tv"
        android:layout_marginTop="5dp"
        android:layout_marginRight="24dp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/activity_registe_bt"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.5"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:text="@string/login_register_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_registe_password_confirm"
        app:layout_constraintVertical_bias="0.2" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/activity_registe_password"
        app:layout_constraintStart_toStartOf="@+id/activity_registe_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>