<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/activity_foodShare_publish_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/share"
            android:textSize="18sp"
            app:layout_constraintHeight_percent="0.09" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/listview_topline"
            app:layout_constraintTop_toBottomOf="@id/activity_foodShare_publish_title" />

        <TextView
            android:id="@+id/activity_foodShare_publish_remind_1"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center|left"
            android:text="@string/food_describe"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/activity_foodShare_publish_title" />

        <EditText
            android:id="@+id/activity_foodShare_publish_et"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:gravity="left|top"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_foodShare_publish_remind_1"
            app:layout_constraintWidth_percent="0.97"
            android:background="@null"/>

        <TextView
            android:id="@+id/activity_foodShare_publish_remind_2"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center|left"
            android:text="@string/upload_food_pic"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/activity_foodShare_publish_et" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_foodShare_publish_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:divider="@null"
            android:fadingEdge="none"
            android:listSelector="@android:color/transparent"
            android:scrollbarStyle="outsideOverlay"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/activity_foodShare_publish_remind_2"
            app:spanCount="4"
            tools:ignore="MissingConstraints"
            tools:listitem="@layout/list_item_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_foodShare_publish_recyclerView">


        <Button
            android:id="@+id/activity_foodShare_publish_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Task_Submit_submit" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>