<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/minepage_minor4_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/fragment_mine_funclist_wallet"
        android:textSize="18sp"
        app:layout_constraintHeight_percent="0.09" />


    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/listview_topline"
        app:layout_constraintTop_toBottomOf="@id/minepage_minor4_title"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_1"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@id/minepage_minor4_title"
        android:layout_marginTop="10dp"
        android:background="@color/blue">

        <TextView
            android:id="@+id/minepage_minor4_allmount"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/mine_minor4_mywallet_available_balance"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/minepage_minor4_mountNumber"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="1000"
            android:textSize="50sp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/minepage_minor4_allmount"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/rank_title"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/coins_rank_info"
        android:textSize="@dimen/font_18"
        android:textColor="@drawable/selector_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_coins_ranking"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_percent="0.57"
        app:layout_constraintTop_toBottomOf="@id/rank_title"
        android:layout_marginTop="15dp"
        android:dividerHeight="10dp"
        android:divider="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>